--- a/src/tasks/Task.css
+++ b/src/tasks/Task.css
@@ -1,5 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap');
 
+h3, label {
+    color: white;
+}
 .chore {
     border-radius: 30px;
     box-shadow: 5px 4px 10px 1px rgba(33, 33, 33, 0.16);
@@ -11,14 +14,14 @@
     font-family: 'Roboto', serif;
     max-width: 350px;
     margin: 0 auto 20px;
-
 }
 
 
 body {
-    background: rgb(108,64,201);
-    background: linear-gradient(90deg, rgba(108,64,201,1) 0%, rgba(86,58,217,1) 44%, rgba(30,110,232,1) 85%, rgba(48,131,224,1) 100%);
+    background: rgb(108, 64, 201);
+    background: linear-gradient(90deg, rgba(108, 64, 201, 1) 0%, rgba(86, 58, 217, 1) 44%, rgba(30, 110, 232, 1) 85%, rgba(48, 131, 224, 1) 100%);
 }
+
 .emoji {
     width: 40px;
     line-height: 40px;
@@ -28,7 +31,7 @@ body {
     text-align: center;
     border-radius: 100px;
     font-size: 20px;
-    background: linear-gradient(90deg, rgba(108,64,201,1) 0%, rgba(86,58,217,1) 44%, rgba(30,110,232,1) 85%, rgba(48,131,224,1) 100%);
+    background: linear-gradient(90deg, rgba(108, 64, 201, 1) 0%, rgba(86, 58, 217, 1) 44%, rgba(30, 110, 232, 1) 85%, rgba(48, 131, 224, 1) 100%);
 
 }
 
